# image_landmark_spc_matching_localization

./: .gitignore  README.md
src/darknet_ros/darknet/: .gitignore
src/darknet_ros/darknet_ros/: CMakeLists.txt  package.xml
src/darknet_ros/darknet_ros/config/: image_detection.yaml  ros.yaml
src/darknet_ros/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
src/darknet_ros/darknet_ros/launch/: darknet_ros.launch
src/darknet_ros/darknet_ros/msg/: Label.msg
src/darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
src/darknet_ros/darknet_ros/yolo_network_config/: .gitignore
src/darknet_ros/darknet_ros/yolo_network_config/cfg/: image_detection.cfg
src/deeplab_ros/: CMakeLists.txt  package.xml
src/deeplab_ros/script/: inference_deeplab.py
src/image_to_polygon/: CMakeLists.txt  package.xml
src/image_to_polygon/msg/: Labels.msg
src/image_to_polygon/script/: cmask2polygons.py  inference_deeplab.py
src/landmark_matching_localization/: CMakeLists.txt  package.xml
src/landmark_matching_localization/config/: config.rviz
src/landmark_matching_localization/include/: landmark_matching_pf.hpp  spc_map_processing.hpp  tf_broadcaster.hpp  visualization.hpp
src/landmark_matching_localization/launch/: gps_localization.launch  landmark_matching_and_pointcloud_matching.launch  landmark_matching_localizaion.launch  landmark_point_cloud_map_matching_localization.launch  map_matching_localization.launch  point_cloud_map_matching_localization.launch
src/landmark_matching_localization/map/: .gitignore  Configuration.ini
src/landmark_matching_localization/src/: landmark_matching_pf.cpp  spc_map_processing.cpp  tf_broadcaster.cpp  visualization.cpp
src/map_merge_downsample/: map_merger_tool.py
